PR toolchain/53710

allow 64bit target to compile on 32bit host

Ok'ed by <christos>